syntax = "proto3";
package IM.Register;
import "IM.BaseDefine.proto";
option java_package = "com.tenth.space.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;

//service id:	0x0009


message IMRegisterReq{
	//cmd id:		0x0901
	 string user_name = 1;
	 string password = 2;
	 bytes attach_data = 20;
}

message IMRegisterRsp{
	//cmd id:		0x0902
	 IM.BaseDefine.ResultType result_code = 1;
	 string result_string = 2;
	 bytes attach_data = 20;
}


